correct vpython install

--- a/Lect1.ipynb
+++ b/Lect1.ipynb
@@ -24,7 +24,14 @@
     "## Conda\n",
     "The best way set-up an scientific Python environment is to use the cross-platform package manager conda from Continuum Analytics. First download and install miniconda http://conda.pydata.org/miniconda.html or Anaconda (see below, download Mac or Windows version depending on your operation system). Next, to install the required libraries for these notebooks, simply run following at your anaconda terminal :\n",
     "\n",
-    "\t$ conda install jupyter spyder numpy scipy sympy matplotlib cython vpython\n",
+    "\t$ conda install jupyter spyder numpy scipy sympy matplotlib cython \n",
+    "    \n",
+    "To install vpython:  \n",
+    "In a Power Shell or Command Prompt (Windows) or Terminal (Mac / Linux) run this command, which will install VPython 7 for Python 2.7, 3.4, 3.5, or 3.6:   \n",
+    "\n",
+    "    $ pip install vpython  \n",
+    "    \n",
+    "  Or if using Anaconda, conda install -c vpython vpython  \n",
     "    \n",
     "After you installed jupyter, you could run it from the anaconda terminal \n",
     "\n",
